<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/wallpaper1"
    tools:context="lucas.digimon.MainMenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/digite_nome"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="40dp"
        android:background="#a000"/>

    <EditText
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:id="@+id/etNome"
        android:textAlignment="center"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/sexo"
        android:textColor="#fff"
        android:layout_marginTop="30dp"
        android:background="#a000"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#a000">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/radio_masculino"
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:textColor="#fff"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton android:id="@+id/radio_feminino"
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:textColor="#fff"
                android:layout_height="wrap_content"
                android:text="@string/feminino"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:text="@string/tv_qtd_fichas"
        android:background="#a000"/>

    <Spinner
        android:id="@+id/fichas_spinner"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:textAlignment="center" />

    <Button
        android:layout_gravity="center"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/comecar"
        android:textSize="@dimen/button_text_size"
        android:textAlignment="center"
        android:textColor="#fff"
        android:id="@+id/btn_comecar"
        android:layout_marginTop="30dp"
        android:background="#000"/>

</LinearLayout>

