<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lucas.digimon.MenuActivity"
    android:orientation="vertical"
    android:background="@drawable/wallpaper1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/logo"/>

    <Button
        android:layout_gravity="center"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/Jogar"
        android:textSize="@dimen/button_text_size"
        android:textAlignment="center"
        android:textColor="#fff"
        android:id="@+id/btn_jogar"
        android:background="#000"/>

    <Button
        android:layout_gravity="center"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/sobre"
        android:textSize="@dimen/button_text_size"
        android:textAlignment="center"
        android:textColor="#fff"
        android:id="@+id/btn_sobre"
        android:layout_marginTop="20dp"
        android:background="#000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:background="#a000"/>

</LinearLayout>
